...
            decoderPath = request.components.codecDecoder.path,
            encoderPath = request.components.codecEncoder?.path.orEmpty(),
            prompt = request.prompt,
            negativePrompt = request.negativePrompt.orEmpty(),
            durationSeconds = request.durationSeconds,
            steps = request.steps,
            seed = request.seed,
            initNoiseLevel = request.initNoiseLevel,
            cfg = request.cfg,
            apg = request.apg,
            cfgBatched = request.cfgBatched,
            initAudioPath = request.initAudioPath.orEmpty(),
            maskStartSeconds = request.maskStartSeconds ?: Double.NaN,
...
